@@ -1,5 +1,6 @@
 Changes for Perl extension Padre-Plugin-Swarm
 0.093 -
+	- extend the plugin pod and chat pod
 	- hackish keepalive on global transport wxsocket
 	- fix wx flags on chat control to behave on win32
 	- fix json decoding bug with large messages
